testsuite/bsc.syntax/bsv05/ImperativeFunctionCaseMatchingNestedBad.bsv.bsc-out.expected
checking package dependencies
Error: "ImperativeFunctionCaseMatchingNestedBad.bsv", line 13, column 27: (P0005)
  Unexpected `='; expected `:'
